--- a/css/app.css
+++ b/css/app.css
@@ -112,3 +112,43 @@ h1 {
   display: inline-block;
   margin: 0 1rem;
 }
+
+/*
+ * Styles for the modal
+ */
+
+.modal {
+    display: none;
+    position: fixed;
+    align-items: center;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+}
+
+.modal-content {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 15% auto;
+    padding: 20px;
+    width: 70%;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
