--- a/css/app.css
+++ b/css/app.css
@@ -128,6 +128,7 @@ h1 {
     height: 100%;
     overflow: auto;
     background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
 }
 
 .modal-content {
@@ -136,7 +137,8 @@ h1 {
     text-align: center;
     margin: 15% auto;
     padding: 20px;
-    width: 70%;
+    width: 30%;
+    background-color: #fefefe;
 }
 
 .close {
